--- a/schoolApp/src/main/res/layout/row_archieved_events.xml
+++ b/schoolApp/src/main/res/layout/row_archieved_events.xml
@@ -18,6 +18,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="1dip"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:background="@color/white"
             android:orientation="vertical" >
 
@@ -34,15 +35,12 @@
                 android:textStyle="bold"
                 android:id="@+id/event_cat_name" />
 
-            <ImageView
-                android:id="@+id/icon"
+            <com.champs21.schoolapp.viewhelpers.CustomRhombusIcon
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dip"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/science" />
+                custom:iconImageRhombus="@drawable/event_row_gray_icon" >
+            </com.champs21.schoolapp.viewhelpers.CustomRhombusIcon>
 
             <TextView
                 android:id="@+id/txtTime"
