1. Some view related issues are fixed in Lesson Plan for both layouts and associated java classes.

--- a/schoolApp/src/main/res/layout/row_lessonplan_view.xml
+++ b/schoolApp/src/main/res/layout/row_lessonplan_view.xml
@@ -28,8 +28,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:gravity="center"
-                android:button="@drawable/check_lessonplan"
+                android:gravity="center_vertical"
+                android:button="@null"
+                android:drawableLeft="@drawable/check_lessonplan"
                 android:checked="false"
                 android:clickable="true"
                 android:layout_centerInParent="true" />
