--- a/schoolApp/src/main/res/layout/fragment_teacher_add_homework.xml
+++ b/schoolApp/src/main/res/layout/fragment_teacher_add_homework.xml
@@ -61,7 +61,7 @@
                         android:gravity="center"
                         android:maxLines="1"
                         android:padding="10dp"
-                        android:text="Mathematics"
+                        android:hint="Select Subject"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
 
@@ -113,7 +113,7 @@
                         android:ems="7"
                         android:gravity="center"
                         android:padding="10dp"
-                        android:text="Regular"
+                        android:hint="Select Type"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
 
