--- a/schoolApp/src/main/res/layout/fragment_progress_graph.xml
+++ b/schoolApp/src/main/res/layout/fragment_progress_graph.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bg"
-    android:padding="10dp">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
         <LinearLayout
             android:padding="10dp"
@@ -41,6 +42,7 @@
                 android:textColor="@color/gray_1"
                 android:maxEms="9"
                 android:ellipsize="end"
+                android:textSize="12sp"
                 android:text="No Subject Selected"/>
             <ImageButton
                 android:layout_marginRight="5dp"
@@ -55,7 +57,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="@color/white">
         <LinearLayout
             android:layout_width="match_parent"
