Alternate Bg color in List View added.

--- a/schoolApp/src/main/res/values/colors.xml
+++ b/schoolApp/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
 	<color name="accepted_color">#017DB9</color>
 	<color name="red_disable">#c89fa0</color>
 	<color name="bg_disable">#ecedee</color>
-	
+	<color name="bg_row_odd">#F4F6F7</color>
 	<color name="search_container_tap">#e7ecee</color>
 	
 	<color name="total_class">#11b4a7</color>
