--- a/schoolApp/src/main/res/layout/item_teacher_homework_feed.xml
+++ b/schoolApp/src/main/res/layout/item_teacher_homework_feed.xml
@@ -104,7 +104,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.19"
-                    android:text="Assign Date: "
+                    android:text="Assigned Date: "
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
