--- a/schoolApp/src/main/res/layout/activity_lessonplan_subject_details.xml
+++ b/schoolApp/src/main/res/layout/activity_lessonplan_subject_details.xml
@@ -100,18 +100,18 @@
             android:id="@+id/layoutListHolder"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white">
+            android:layout_height="match_parent">
 
-            <ListView
+            <com.handmark.pulltorefresh.library.PullToRefreshListView
                 android:id="@+id/listViewLessonPlanSubjectDetails"
                 android:layout_width="match_parent"
-                android:cacheColorHint="@android:color/transparent"
+                android:layout_height="match_parent"
+                android:cacheColorHint="#00000000"
                 android:divider="@color/gray_2"
-                android:dividerHeight="2dp"
-                android:layout_height="wrap_content">
+                android:dividerHeight="1dp"
+                android:smoothScrollbar="true"
+                android:layout_below="@+id/layoutBar" />
 
-            </ListView>
 
         </LinearLayout>
 
