--- a/schoolApp/src/main/res/layout/activity_single_lessonplan.xml
+++ b/schoolApp/src/main/res/layout/activity_single_lessonplan.xml
@@ -119,6 +119,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/layoutButtonHolder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal">
@@ -173,6 +174,6 @@
 
 
 
-    
+
 
 </LinearLayout>
