--- a/schoolApp/src/main/res/layout/row_lessonplan_studentparent_subject.xml
+++ b/schoolApp/src/main/res/layout/row_lessonplan_studentparent_subject.xml
@@ -31,6 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:layout_margin="5dp"
             android:orientation="vertical">
 
 
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:text="Physics"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -49,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="Last Updated 8 April 2015"
                 android:textColor="@color/gray_1"
-                android:textSize="16sp" />
+                android:textSize="12sp" />
 
 
         </LinearLayout>
