--- a/schoolApp/src/main/res/layout/row_lessonplan_subject_details.xml
+++ b/schoolApp/src/main/res/layout/row_lessonplan_subject_details.xml
@@ -5,6 +5,7 @@
 
 
     <LinearLayout
+        android:id="@+id/layoutRoot"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
