--- a/schoolApp/src/main/res/layout/row_feeshistory.xml
+++ b/schoolApp/src/main/res/layout/row_feeshistory.xml
@@ -93,6 +93,7 @@
                 android:id="@+id/txtStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:textColor="@android:color/black"
                 android:text="Status" />
 
